# Confluence-RAG

./: .env.template  .gitignore  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
airflow/: Dockerfile  entrypoint.sh  requirements-airflow.txt
airflow/dags/: index_pages_dag.py  page_ingest_dag.py
airflow/dags/AtlassianAPIWrapper/: __init__.py  endpoints.py  page_metadata.py  space_metadata.py
src/: Dockerfile  requirements.txt
src/app/: main.py
src/app/common/: database.py
src/app/qdrant/: __init__.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 202509280105_e2390ebd39f5_create_pages_table.py  202509280145_a242gbz32a5_create_current_pages_view.py
